# Give-Me-a-DAY-

./: .env.example  .gitignore  CLAUDE.md  CURRENT_STATE.md  DECISIONS.md  OPEN_LOOPS.md  README.md  SESSION_HANDOFF.md
backend/: pyproject.toml
backend/src/: config.py  main.py
backend/src/api/: dependencies.py  routes.py  schemas.py
backend/src/domain/: models.py
backend/src/execution/: __init__.py  backtest_engine.py  comparison_engine.py  data_acquisition.py  paper_run_engine.py  statistical_tests.py
backend/src/judgment/: __init__.py  audit_engine.py
backend/src/llm/: client.py  fallbacks.py  prompts.py
backend/src/persistence/: audit_log.py  store.py
backend/src/pipeline/: approval_controller.py  candidate_generator.py  domain_framer.py  evidence_planner.py  goal_intake.py  orchestrator.py  presentation_builder.py  recommendation_engine.py  research_spec_compiler.py  runtime_controller.py  validation_planner.py
backend/tests/: test_approval_controller.py  test_audit_engine.py  test_backtest_engine.py  test_candidate_generator.py  test_comparison_engine.py  test_data_acquisition.py  test_domain_framer.py  test_evidence_planner.py  test_goal_intake.py  test_orchestrator_round2.py  test_orchestrator_round3_execution.py  test_paper_run_engine.py  test_persistence.py  test_presentation_builder.py  test_recommendation_engine.py  test_research_spec_compiler.py  test_runtime_controller.py  test_runtime_routes.py  test_statistical_tests.py  test_validation_planner.py
backend/tests/fixtures/: sample_goals.json
docs/: implementation_instructions.md  (+1 more)
(+86 files in other folders)
